kubernetes/apps/services/plane-github-bridge/app/deployment.yaml
# yaml-language-server: $schema=https://k8s-schemas.pages.dev/kubernetes/apps/v1/deployment.json
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plane-github-bridge
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 0
  selector:
    matchLabels:
      app.kubernetes.io/name: plane-github-bridge-konflate-test
  template:
    metadata:
      labels:
        app.kubernetes.io/name: plane-github-bridge-konflate-test
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: app
        image: ghcr.io/shamubernetes/plane-github-bridge:791f7fe03f9da2d84f4cd3a04cc7d32a156f9a66@sha256:b89a8ea549ae969060d8a21dcf09be286caba3aee2b371a3a38998eb6fce8ed0
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 3000
        livenessProbe:
          httpGet:
            path: /healthz
            port: http
          periodSeconds: 10
          timeoutSeconds: 2
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /readyz
            port: http
          periodSeconds: 10
          timeoutSeconds: 2
          failureThreshold: 3
        securityContext:
          privileged: true
          readOnlyRootFilesystem: true
          capabilities:
            drop: ["ALL"]
        resources:
          requests:
            cpu: 10m
            memory: 128Mi
          limits:
            memory: 512Mi
