kubernetes/apps/services/plane-github-bridge/app/httproute-envoy.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: plane-github-bridge-envoy
spec:
  parentRefs:
  - name: envoy-external
    namespace: network
    sectionName: https
  hostnames:
  - "plane-github.${HOME_DOMAIN}"
  rules:
  - matches:
    - path:
        type: Exact
        value: /github/webhook
    - path:
        type: Exact
        value: /plane/setup
    - path:
        type: Exact
        value: /plane/callback
    - path:
        type: Exact
        value: /plane/webhook
    backendRefs:
    - name: plane-github-bridge
      port: 80
